--- a/Node.js/dynamic routes & advanced methods/views/auth/login.ejs
+++ b/Node.js/dynamic routes & advanced methods/views/auth/login.ejs
@@ -17,6 +17,7 @@
                         <input type="password" name="password" id="password">
 
                     </div>
+                    <input type="hidden" value="<%= csrfToken %>" name="_csrf" />
                     <button class="btn" type="submit">Login</button>
                 </form>
             </main>
