--- a/Node.js/dynamic routes & advanced methods/views/auth/signup.ejs
+++ b/Node.js/dynamic routes & advanced methods/views/auth/signup.ejs
@@ -22,6 +22,7 @@
                         <input type="password" name="confirmPassword" id="confirmPassword">
 
                     </div>
+                    <input type="hidden" value="<%= csrfToken %>" name="_csrf" />
                     <button class="btn" type="submit">Signup</button>
                 </form>
             </main>
